<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.smartcommunitylabdhub</groupId>
    <artifactId>digitalhub-core</artifactId>
    <name>digitalhub-core</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.15.1-SNAPSHOT</revision>
        <project.build.outputTimestamp>2025-11-01T00:00:00Z</project.build.outputTimestamp>
        <java.version>21</java.version>
        <spring-boot.version>3.5.9</spring-boot.version>
        <spring-security.version>6.5.7</spring-security.version>
        <spring-integration.version>6.5.7</spring-integration.version>
        <springdoc.version>2.7.0</springdoc.version>
        <jackson.version>2.18.4</jackson.version>
        <jsonschema.version>4.36.0</jsonschema.version>
        <slf4j.version>2.0.17</slf4j.version>
        <kubernetes.version>24.0.0-legacy</kubernetes.version>
        <maven.compiler.release>21</maven.compiler.release>
        <lombok.version>1.18.42</lombok.version>
        <guava.version>33.4.8-jre</guava.version>
        <postgresql.version>42.7.2</postgresql.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <checkstyle.config.location>checkstyle/checkstyle.xml</checkstyle.config.location>
        <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
    </properties>

    <modules>
        <module>modules/commons</module>
        <module>modules/authorization</module>
        <module>modules/fsm</module>
        <module>modules/component-templates</module>
        <module>modules/component-cloud</module>
        <module>modules/component-metrics</module>
        <module>modules/component-relationships</module>
        <module>modules/component-search</module>
        <module>modules/component-labels</module>
        <module>modules/component-logs</module>
        <module>modules/component-files</module>
        <module>modules/component-envoy-gateway</module>
        <module>modules/component-extensions</module>
        <module>modules/component-container-images</module>
        <module>modules/entity-base</module>
        <module>modules/runtime-base</module>
        <module>entities/entity-artifact</module>
        <module>entities/entity-dataitem</module>
        <module>entities/entity-function</module>
        <module>entities/entity-project</module>
        <module>entities/entity-run</module>
        <module>entities/entity-secret</module>
        <module>entities/entity-task</module>
        <module>entities/entity-model</module>
        <module>entities/entity-trigger</module>
        <module>entities/entity-log</module>
        <module>entities/entity-workflow</module>
        <module>entities/entity-container-image</module>
        <module>frameworks/framework-k8s</module>
        <module>frameworks/framework-argo</module>
        <module>frameworks/framework-kaniko</module>
        <module>modules/trigger-base</module>
        <module>triggers/trigger-scheduler</module>
        <module>triggers/trigger-lifecycle</module>
        <module>runtimes/runtime-container</module>
        <module>runtimes/runtime-dbt</module>
        <module>runtimes/runtime-kfp</module>
        <module>runtimes/runtime-hera</module>
        <module>runtimes/runtime-python</module>
        <module>runtimes/runtime-flower</module>
        <module>runtimes/runtime-model-serve</module>
        <module>runtimes/runtime-kubeai</module>
        <module>runtimes/runtime-servicegraph</module>
        <module>modules/openmetadata-integration</module>
        <module>modules/proxy</module>
        <module>modules/component-run-initializer</module>
        <module>providers/credentials-provider-db</module>
        <module>providers/trinodb-provider</module>
        <module>providers/s3-provider</module>
        <module>providers/search-lucene</module>
        <module>providers/search-solr</module>
        <module>providers/cloud-rabbitmq</module>
        <module>providers/loki-logs-provider</module>
        <module>frontend</module>
        <module>application</module>
    </modules>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
    </reporting>

    <dependencyManagement></dependencyManagement>
</project>